# fund_gui

./: .gitignore  1.html  Pipfile  README.md  config.py  data.txt  database.db  db.json  main_window.py  mainwindow.ui  manage.py  manage1.py  pyproject.toml  render.html  test.py  util.py  web_browser.py
data/: cookie  data.txt  database.db
ui/: charts.ui  mainwindow.ui
utils/: util.py  web_browser.py
view/: charts.py  main_window.py  myfund_qsql_table_model.py  myfund_table_view.py  search_line_edit.py
